[package]
name = "prepare_two_die"
description = "A physics-based dice roller for the Bevy game engine"
homepage = "https://github.com/sheepyhead/prepare_two_die"
repository = "https://github.com/sheepyhead/prepare_two_die"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.6.1"
bevy_rapier3d = "0.12.1"
rand = "0.8.5"
regex = "1.5.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
